crates/oxc_css_parser/tests/error/value/url/qoutes.snap
---
source: crates/oxc_css_parser/tests/error.rs
---
error: invalid URL
  ┌─ qoutes.css:2:19
  │
2 │   background: url(a"b");
  │                   ^


